[package]
name = "test_f401"
version = "0.1.0"
authors = ["Oleg"]
edition = "2018"

# Зависимости для разработки под процессор Cortex-M3
[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f401", "rt"]

# Позволяет использовать `cargo fix`!
[[bin]]
name = "test_f401"
test = false
bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация
